# easy-portals-workshop

./: README.md  ezportals.c  ezportals.h  meson.build
challenge1/: README.md  hello.c  meson.build
challenge2/: README.md  climate.c  climate_earth.ppm  meson.build
challenge3/: README.md  broadcast.c  meson.build
utils/: challenges.c  challenges.h  meson.build  viz-impl.c  viz.h
