
executable(
  'climate',
  'climate.c',
  dependencies: [libezportals, libchallenges, libviz, libpthread_dep],
  include_directories: ezportals_hdrs,
)

executable(
  'climate.impl',
  'climate.impl.c',
  dependencies: [libezportals, libchallenges, libviz, libpthread_dep],
  include_directories: ezportals_hdrs,
)

