
executable(
  'broadcast',
  'broadcast.c',
  dependencies: [libezportals, libpthread_dep],
  include_directories: ezportals_hdrs,
)

executable(
  'broadcast.impl0',
  'broadcast.impl0.c',
  dependencies: [libezportals, libpthread_dep],
  include_directories: ezportals_hdrs,
)

executable(
  'broadcast.impl1',
  'broadcast.impl1.c',
  dependencies: [libezportals, libpthread_dep],
  include_directories: ezportals_hdrs,
)

executable(
  'broadcast.impl2',
  'broadcast.impl2.c',
  dependencies: [libezportals, libpthread_dep],
  include_directories: ezportals_hdrs,
)
